# moysklad-autoproduction

./: moysklad_github.json  moysklad_main.json  moysklad_reports.json  moysklad_tech_operation.json  search_process.json  search_processing.json  search_processing_plan.json  search_stock.json  search_stock_api.json  search_tech_op.json  search_webhook2.json  techmap_support.json  techop_support.json  worklog.md
moysklad-autoproduction/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  moysklad-autoproduction.service  podman-compose.yml  publish-docker.ps1  publish-docker.sh  run-podman.sh
moysklad-autoproduction/.cargo/: config.toml
moysklad-autoproduction/.github/workflows/: docker-publish.yml
moysklad-autoproduction/src/: main.rs
moysklad-autoproduction/src/api/: moysklad.rs
moysklad-autoproduction/src/config/: settings.rs
moysklad-autoproduction/src/handlers/: webhook.rs
moysklad-autoproduction/src/models/: mod.rs  moysklad.rs
moysklad-autoproduction/src/processing/: processor.rs
src/lib/moysklad/: client.ts  types.ts
